TinyWall Changelog
---------------------

3.1.2 - Important update (x.10.2021.)
- Add support for encrypted DNS in Windows 11
- Add support for whitelisting volumes mounted to mount points
- Add workaround for ImDisk issue
- Fix memory leak when changing service failure action
- Fix memory leak when verifying authenticode certificate
- Fix Connections list not sorted by timestamp by default (3.1.1 regression)
- Fix possible null-dereference with VeraCrypt volumes
- Update Japanese and Portuguese localizations

---------------------

3.1.1 - Important update (11.10.2021.)
- Add option to block internet during display power-save
- Heuristically determine and show PIDs of blocked processes if possible
- Support for showing and whitelisting services in Processes and Connections windows
- Launch GUI with elevated privileges on boot if possible
- Use exact capitalization of paths from autolearn and blocked processes
- Reduce dependency on WMI and avoid polling by WMI
- Avoid creation of redundant "-" entries during autolearn
- Fix WFP audit logging is not disabled when autolearn mode ends
- Fix "active connections" and "open ports" lists would not recognize UWP processes as such
- Fix rule is ineffective if loaded while its target path is not mounted
- Fix rule is ineffective for paths with certain international characters
- Fix Bulgarian translation not loading
- Fix non-form Korean messages are gibberish due to wrong encoding
- Updated German, Italian translations
- New Hebrew localization
- GUI layout fixes for various localizations
- Updated application database
- Deprecation notes:
    Windows 7, 8, 8.1, and certain older versions of Windows 10
    will soon not be supported in a future TinyWall release.

---------------------

3.0.10 - Maintenance release (04.11.2020.)
- Fix invalid WFP rules created for "System" on some machines (3.0.9 regression)

---------------------

3.0.9 - Maintenance release (01.11.2020.)